# template-python-library

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  manual_release.yml  publish.yml  release_tag.yml
scripts/: setup_system.sh
scripts/git-hooks/: commit-msg
src/greeter/: __init__.py  greeter.py
tests/: test_greeter.py  test_logging.py  test_setup_logging.py
tmp/: logging.md
